// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`route > loadRoutes > 0 routes 1`] = `[]`;

exports[`route > loadRoutes > 1 route no modules 1`] = `
[
  {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with _end.tsx module 1`] = `
[
  {
    "elements": {
      "end": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_end.tsx",
        "id": "src/_end.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with _index.tsx module 1`] = `
[
  {
    "elements": {
      "index": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_index.tsx",
        "id": "src/_index.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;

exports[`route > loadRoutes > 1 route with _this.tsx module 1`] = `
[
  {
    "elements": {
      "this": {
        "Main": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {},
          "type": [Function],
        },
      },
    },
    "loaded": true,
    "modules": [
      {
        "fileName": "_this.tsx",
        "id": "src/_this.tsx",
        "importFn": [Function],
      },
    ],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
]
`;
